src/objects/New_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Employee_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is for testing</description>
        <label>Employee History</label>
        <referenceTo>New_Parent__c</referenceTo>
        <relationshipLabel>New Employees</relationshipLabel>
        <relationshipName>New_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Technical__c</fullName>
        <label>Non Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Technical</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non Technical</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical__c</fullName>
        <label>Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>New Employee</label>
    <listViews>
        <fullName>Avail_Department_New_Employee</fullName>
        <filterScope>Queue</filterScope>
        <label>Avail Department</label>
        <queue>Avail_Department</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>New Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Employees</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <label>Non Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>